<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zgas.tesselar.myzuite.View.Activity.UserOperator.DetailActivityOperator"
    tools:showIn="@layout/activity_detail_operator">

    <TextView
        android:id="@+id/activity_detail_operator_prompt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/icon_account"
        android:drawablePadding="3dp"
        android:drawableTint="@color/dark_grey_300"
        android:gravity="center"
        android:text="@string/prompt_detail_operator_client_name"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_detail_operator_tv_client_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/grey_800"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/activity_detail_operator_tv_case_address"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_prompt_username" />

    <TextView
        android:id="@+id/activity_detail_operator_prompt_case_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/icon_address"
        android:drawablePadding="3dp"
        android:drawableTint="@color/dark_grey_300"
        android:gravity="center"
        android:text="@string/prompt_detail_operator_address"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/activity_detail_operator_prompt_username"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_tv_client_name" />

    <TextView
        android:id="@+id/activity_detail_operator_tv_case_address"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:maxLines="3"
        android:text="TextView"
        android:textColor="@color/grey_800"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/activity_detail_operator_tv_time_programmed"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_prompt_case_address" />

    <TextView
        android:id="@+id/activity_detail_operator_case_programmed_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/icon_clock"
        android:drawablePadding="3dp"
        android:drawableTint="@color/dark_grey_300"
        android:gravity="center"
        android:text="@string/prompt_detail_operator_hour_set"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/activity_detail_operator_prompt_username"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_tv_case_address" />

    <TextView
        android:id="@+id/activity_detail_operator_tv_time_programmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/grey_800"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/activity_detail_operator_prompt_username"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_case_programmed_time" />

    <TextView
        android:id="@+id/activity_detail_operator_operator_Quantify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/icon_gas"
        android:drawablePadding="3dp"
        android:drawableTint="@color/dark_grey_300"
        android:gravity="center"
        android:text="@string/prompt_detail_operator_Quantify"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/activity_detail_operator_case_programmed_time"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_tv_time_programmed" />

    <TextView
        android:id="@+id/activity_detail_operator_operator_Quantify_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/grey_800"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/activity_detail_operator_tv_time_in"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_operator_Quantify" />

    <TextView
        android:id="@+id/activity_detail_operator_prompt_time_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/icon_clock_in"
        android:drawablePadding="3dp"
        android:drawableTint="@color/dark_grey_300"
        android:gravity="center"
        android:text="@string/prompt_detail_operator_hour_made"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/activity_detail_operator_operator_Quantify"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_operator_Quantify_seen" />

    <TextView
        android:id="@+id/activity_detail_operator_prompt_arrival_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/icon_clock_out"
        android:drawablePadding="3dp"
        android:drawableTint="@color/dark_grey_300"
        android:gravity="center"
        android:text="@string/prompt_detail_operator_hour_arrived"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/activity_detail_operator_prompt_time_in"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_operator_Quantify_seen" />

    <TextView
        android:id="@+id/activity_detail_operator_tv_time_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/dark_grey_800"
        app:layout_constraintStart_toStartOf="@+id/activity_detail_operator_tv_status"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_prompt_time_in" />

    <TextView
        android:id="@+id/activity_detail_operator_tv_arrived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/dark_grey_800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_prompt_arrival_time" />

    <TextView
        android:id="@+id/activity_detail_operator_prompt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/icon_clipboard"
        android:drawablePadding="3dp"
        android:drawableTint="@color/dark_grey_300"
        android:gravity="center"
        android:text="@string/prompt_detail_operator_status"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/activity_detail_operator_prompt_time_in"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_tv_time_in" />

    <TextView
        android:id="@+id/activity_detail_operator_tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/grey_800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_prompt_status" />

    <TextView
        android:id="@+id/activity_detail_operator_prompt_payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/icon_payment"
        android:drawablePadding="3dp"
        android:drawableTint="@color/dark_grey_300"
        android:gravity="center"
        android:text="@string/prompt_detail_operator_payment"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/activity_detail_operator_prompt_status"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_tv_arrived" />

    <TextView
        android:id="@+id/activity_detal_operator_tv_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/dark_grey_800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_prompt_payment_method" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_detail_operator_fab_finished"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        app:backgroundTint="@color/light_green"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_detail_operator_fab_in_progress"
        app:layout_constraintTop_toBottomOf="@+id/activity_detal_operator_tv_payment"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icon_end" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_detail_operator_fab_in_progress"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:tint="@color/white"
        app:backgroundTint="@color/amber"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detal_operator_tv_payment"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icon_gas_tank" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_detail_operator_fab_failure"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        app:backgroundTint="@color/red"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_detail_operator_fab_in_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detal_operator_tv_payment"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icon_close" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_detail_operator_fab_waze"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="103dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        app:backgroundTint="@color/sky_blue"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintLeft_toRightOf="@+id/activity_detail_operator_prompt_case_address"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icon_waze" />

    <TextView
        android:id="@+id/activity_detail_operator_prompt_order_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/icon_gas_cylinder"
        android:drawablePadding="3dp"
        android:drawableTint="@color/dark_grey_300"
        android:gravity="center"
        android:text="@string/promtp_detail_order_type"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/activity_detail_operator_prompt_status"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_tv_status" />

    <TextView
        android:id="@+id/activity_detail_operator_tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/dark_grey_800"
        app:layout_constraintStart_toStartOf="@+id/activity_detail_operator_tv_status"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_prompt_order_type" />

    <TextView
        android:id="@+id/activity_detail_operator_prompt_treatment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/icon_gas_cylinder"
        android:drawablePadding="3dp"
        android:drawableTint="@color/dark_grey_300"
        android:gravity="center"
        android:text="@string/prompt_detail_treatment_type"
        android:textColor="@color/grey_500"
        app:layout_constraintStart_toEndOf="@+id/activity_detail_operator_prompt_order_type"
        app:layout_constraintTop_toBottomOf="@+id/activity_detal_operator_tv_payment" />

    <TextView
        android:id="@+id/activity_detail_operator_tv_treatment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/dark_grey_800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_prompt_treatment_type" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        android:text="Bonificación"
        app:layout_constraintStart_toEndOf="@+id/activity_detail_operator_case_programmed_time"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_fab_waze" />

    <TextView
        android:id="@+id/activity_detail_operator_cant_bonificacion"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/icon_clock_out"
        android:drawablePadding="3dp"
        android:drawableTint="@color/dark_grey_300"
        android:gravity="center"
        android:text="@string/prompt_detail_operator_cant_bonificacion"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/activity_detail_operator_fab_waze"
        app:layout_constraintStart_toEndOf="@+id/activity_detail_operator_tv_time_programmed"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/activity_detail_operator_cant_bonificacion_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/dark_grey_800"
        app:layout_constraintStart_toEndOf="@+id/activity_detail_operator_operator_Quantify"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_operator_cant_bonificacion" />

</android.support.constraint.ConstraintLayout>
